--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
 			<version>42.3.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 
